# pick

./: .gitignore  .todo  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  GNUmakefile  INSTALL.md.in  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  choice.c  choice.h  compat-pledge.c  compat-pledge.d  compat-reallocarray.c  compat-reallocarray.d  compat-sandbox.c  compat-strtonum.c  compat-strtonum.d  compat-xpoll.c  compat.h  config.h.in  configure  configure.ac  io.c  io.h  list.c  list.h  main.c  pick  pick.1  pick.c  pick.d  pty.c  str_list.c  str_list.h  (+6 more)
.github/workflows/: test.yml
arch/: PKGBUILD  PKGBUILD.in
examples/: pick-history.bash4  pick-history.zsh  shell.md
homebrew/: pick.rb.in
man/: Makefile.am
man/man1/: pick.1
src/: Makefile.am  choice.c  choice.h  choices.c  choices.h  compat.c  compat.h  io.c  io.h  levenshtein.c  levenshtein.h  main.c  pick.c  query.c  query.h  tty.c  tty.h  ui.c  ui.h
src/compat/: reallocarray.c  reallocarray.h  strlcat.c  strlcat.h  strlcpy.c  strlcpy.h
tests/: .gitignore  01.in  01.t  02.in  02.t  03.t  04.t  05.in  05.t  06.in  06.t  07.in  07.t  08.in  08.t  09.in  09.t  10.in  10.t  11.in  11.t  12.in  12.t  13.in  13.t  14.t  15.in  15.t  16.t  17.t  18.in  18.t  19.in  19.t  20.in  20.t  21.in  21.t  22.t  23.in  (+120 more)
